# DDAE_optimized

./: README.md  demo_linux.sh  demo_windows.ps1  environment.yml  pyproject.toml
configs/: field_demo.yaml  infer_field.yaml  syn_demo.yaml
data/sample/: DDAE_Denoising.ipynb  bestInitial_syn.json  bestInitial_synW.h5
docs/: vscode定向优化使用.md  开始使用(x).md  项目优化说明.md
src/ddae_seismic/: __init__.py  config.py  data_io.py  losses.py  metrics.py  models.py
src/ddae_seismic.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ddae_seismic/scripts/: _common.py  import_legacy.py  infer.py  train_field.py  train_syn.py
src/ddae_seismic/utils/: patching.py  seed.py
